# aws_text_analytics_api

./: .envrc.template  .gitignore  Makefile  README.md  pyproject.toml
lambda_function/hello_world/: Dockerfile  app.py  response.json
lambda_function/text_classify/: Dockerfile  app.py
lambda_function/text_embeddings/: app.py
lambda_function/text_processing/: Dockerfile  app.py  requirements.txt
lib/: preprocessing.py
model/: main.py  text_classification_model.joblib  tmp.py
tests/: conftest.py
tests/lambda_function/: test_hello_world.py
