[tool.poetry]
name = "aws-text-analytics-api"
version = "0.1.0"
description = ""
authors = ["konumaru <konumaru1022@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aws-lambda-powertools = "^2.26.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pyproject-flake8 = "^6.1.0"
black = "^23.10.1"
isort = "^5.12.0"
mypy = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
