[tool.poetry]
name = "aws-text-analytics-api"
version = "0.1.0"
description = ""
authors = ["konumaru <konumaru1022@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
joblib = "^1.3.2"
scikit-learn = "^1.3.2"
fastapi = "^0.104.1"
mangum = "^0.17.0"
requests = "^2.31.0"
boto3 = "^1.28.82"
uvicorn = "^0.24.0.post1"
gensim = "^4.3.2"
fasttext = {git = "https://github.com/cfculhane/fastText", rev = "main"}
jupyterlab = "^4.0.8"
nltk = "^3.8.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pyproject-flake8 = "^6.1.0"
black = "^23.10.1"
isort = "^5.12.0"
mypy = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.flake8]
max-line-length = 79
extend-ignore = "E203,W503,F401,F841,W605"


[tool.black]
target-version = ["py39", "py310", "py311"]
line-length = 79
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''


[tool.isort]
profile = "black"
line_length = 79
include_trailing_comma = true


[tool.mypy]
no_strict_optional = true
ignore_missing_imports = true
check_untyped_defs = true
